--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@angular/animations": "~9.0.1",
     "@angular/common": "~9.0.1",
     "@angular/compiler": "~9.0.1",
+    "@angular/cli": "~9.0.2",
+    "@angular/compiler-cli": "~9.0.1",
     "@angular/core": "~9.0.1",
     "@angular/forms": "~9.0.1",
     "@angular/platform-browser": "~9.0.1",
