--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build",
-
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postinstall": "ng build --aot --prod"
@@ -25,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
     "express": "^4.17.1",
+    "mdbootstrap": "^4.14.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "typescript": "~3.7.5",
