--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
     "express": "^4.17.1",
+    "material-ui-phone-number": "^2.2.5",
     "mdbootstrap": "^4.14.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
