--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "material-ui-phone-number": "^2.2.5",
     "mdbootstrap": "^4.14.1",
+    "ngx-linkifyjs": "^1.3.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "typescript": "~3.7.5",
