--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@angular/platform-browser": "~9.0.1",
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
+    "@auth0/angular-jwt": "^4.0.0",
+    "angular2-jwt": "^0.2.3",
     "express": "^4.17.1",
+    "jwt-decode": "^2.2.0",
     "material-ui-phone-number": "^2.2.5",
     "mdbootstrap": "^4.14.1",
     "ngx-linkifyjs": "^1.3.0",
