--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.2.5",
-    "@angular/cdk": "^9.1.2",
+    "@angular/animations": "~12.0.0-next.9",
+    "@angular/cdk": "^11.2.9",
     "@angular/cli": "~10.2.3",
-    "@angular/common": "~10.2.5",
-    "@angular/compiler": "~10.2.5",
-    "@angular/compiler-cli": "~10.2.5",
-    "@angular/core": "~10.2.5",
-    "@angular/forms": "~10.2.5",
+    "@angular/common": "~12.0.0-next.9",
+    "@angular/compiler": "~12.0.0-next.9",
+    "@angular/compiler-cli": "~12.0.0-next.9",
+    "@angular/core": "~12.0.0-next.9",
+    "@angular/forms": "~12.0.0-next.9",
     "@angular/material": "^9.1.2",
-    "@angular/platform-browser": "~10.2.5",
-    "@angular/platform-browser-dynamic": "~10.2.5",
-    "@angular/router": "~10.2.5",
+    "@angular/platform-browser": "~12.0.0-next.9",
+    "@angular/platform-browser-dynamic": "~12.0.0-next.9",
+    "@angular/router": "~12.0.0-next.9",
     "@auth0/angular-jwt": "^4.0.0",
     "@ngrx/store": "^11.1.1",
     "angular2-jwt": "^0.2.3",
@@ -34,12 +34,12 @@
     "ngx-linkifyjs": "^1.3.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "typescript": "~4.0.7",
-    "zone.js": "~0.10.3"
+    "typescript": "~4.2.4",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1002.3",
-    "@angular/language-service": "~10.2.5",
+    "@angular/language-service": "~12.0.0-next.9",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
