--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot --prod"
+    "postinstall": "ng build --aot --prod",
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "private": true,
   "dependencies": {
@@ -24,7 +26,9 @@
     "@angular/platform-browser-dynamic": "~12.0.0-next.9",
     "@angular/router": "~12.0.0-next.9",
     "@auth0/angular-jwt": "^4.0.0",
+    "@ngrx/effects": "^11.1.1",
     "@ngrx/store": "^11.1.1",
+    "@ngrx/store-devtools": "^11.1.1",
     "angular2-jwt": "^0.2.3",
     "express": "^4.17.1",
     "file-saver": "^2.0.2",
@@ -40,18 +44,12 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1102.9",
     "@angular/language-service": "~12.0.0-next.9",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jest": "^26.0.22",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~6.3.2",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "jest": "^26.6.3",
+    "jest-preset-angular": "^8.4.0",
     "karma-firefox-launcher": "^1.3.0",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.3"
@@ -59,5 +57,21 @@
   "engine": {
     "node": "12.14.1",
     "npm": "6.14.2"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupJest.ts"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>/node_modules/",
+      "<rootDir>/dist/"
+    ],
+    "globals": {
+      "ts-jest": {
+        "tsConfig": "<rootDir>/tsconfig.spec.json",
+        "stringifyContentPathRegex": "\\.html$"
+      }
+    }
   }
 }
